fix nav on mobile-nojs

--- a/sass/blocks/catalog-item.scss
+++ b/sass/blocks/catalog-item.scss
@@ -15,6 +15,9 @@
 		box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
 	}
 }
+.catalog-item a {
+	text-decoration: none;
+}
 
 .catalog-item__title {
 	margin-top: 0;
